--- a/Sobre.html
+++ b/Sobre.html
@@ -21,25 +21,14 @@
 
         <div class="main">
             <div class="header">
-            <!-- Aqui vai o seu header -->
-                <img src="Imagens/Home.png" width="1000px" height="300px" alt="">
+                <img src="Imagens/Quem somos.png" width="1000px" height="300px" alt="">
+                <!-- Aqui vai o seu header -->
             </div>
     
             <div class="content">
-                <h1><strong>BEM-VINDO À CLÍNICA DO ESPORTE</strong></h1>
-                <p>O atendimento personalizado ao paciente é o que diferencia a Clinica do Esporte. Ao visitar um de nossos quatro campus no Setor Sul e Centro Médico Buriti, você receberá atendimento de primeira classe. Médicos especialistas especializados e equipe clínica atenciosa proporcionam a você uma experiência de saúde excepcional. O atendimento personalizado ao paciente é o que diferencia a Clínica do Esporte</p>
-                <ul>
-                    <li>Ortopedia/traumatologia</li>
-                    <li>Clínica Médica</li>
-                    <li>Ultrassonografia</li>
-                    <li>Cirurgia Geral</li>
-                    <li>Reumatologia</li>
-                    <li>Cardiaologia</li>
-                    <li>Fisioterapia</li>
-                    <li>Neurologia</li>
-                    <li>Radiologia</li>
-                    <li>Nutrição</li>
-                </ul>
+                <h1>Quem somos</h1> <Br>
+                <p>A Clínica do Esporte surgiu em 1992 em Goiânia, com uma proposta inovadora em relação ao tratamento de pacientes portadores de Traumatismos e Patologias Ortopédicas causadas ou não pela prática desportiva, visando recuperação rápida e segura dentro de padrões de excelência no atendimento médico-ortopédico, comparável aos maiores Centros da Ortopedia Nacional.
+                    Sua equipe médica é composta pelos mais gabaritados profissionais, que atuam nas diversas subespecialidades da ortopedia. A Clínica do Esporte apresenta instalações modernas, com três unidades de fácil acesso na cidade de Goiânia: Centro Médico Buriti e Unidade de Fisioterapia no Parque Amazônia, além do já conhecido Hospital Clínica do Esporte no Setor Sul</p>
                 <!-- Aqui vai o seu conteúdo -->
             </div>
     
